moved variable examples to variables folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,10 @@ project(lectures_700 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(helloworld helloworld/main.c)
-
-add_executable(c_to_f celsius_to_fahrenheit/main.c)
-add_executable(character character/main.c)
-add_executable(polynomial polynomial/main.c)
-add_executable(scientific_notation scientific_notation/main.c)
-add_executable(even_multiple even_multiple/main.c)
-add_executable(conversions conversions/main.c)
+add_executable(helloworld variables/helloworld/main.c)
+add_executable(c_to_f variables/celsius_to_fahrenheit/main.c)
+add_executable(character variables/character/main.c)
+add_executable(polynomial variables/polynomial/main.c)
+add_executable(scientific_notation variables/scientific_notation/main.c)
+add_executable(even_multiple variables/even_multiple/main.c)
+add_executable(conversions variables/conversions/main.c)
