added memory examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,8 @@ add_executable(two_dim_function functions/two_dim_function/main.c)
 
 add_executable(simple_ptr pointers/simple_pointer/main.c)
 add_executable(string_ptr pointers/string_pointers/main.c)
+
+add_executable(simple_malloc memory/simple_malloc/main.c)
+add_executable(array_malloc memory/array_malloc/main.c)
+add_executable(complex_array memory/complex_array/main.c)
+add_executable(linked_list memory/linked_list/main.c)
